--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "@babel/preset-env": "^7.13.5",
     "animejs": "^3.2.1",
     "babel-loader": "^8.2.2",
+    "browserify-zlib": "^0.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
     "dat.gui": "^0.7.7",
+    "fast-png": "^6.1.0",
     "file-loader": "^6.2.0",
+    "fs": "^0.0.1-security",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
     "jszip": "^3.9.1",
     "lil-gui": "^0.16.1",
     "mini-css-extract-plugin": "^1.3.9",
+    "pngjs3": "^6.0.1",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
